tests/testcases/valid/lambdas/03_single_capture.ciel
// Test: Lambda with single capture and no parameters
// Expected: Should call constructor with capture value, access capture in body

int main() {
    int x;
    x = 42;

    // Lambda with single capture
    [a = x] get_x(int param) -> int {
        return a;
    };

    // Call the lambda
    int result = get_x(0);

    return 0;
}
