tests/testcases/invalid/semantic/17_switch_with_no_cases.ciel
// Error: switch statement has no cases
int main() {
    int x = 5;
    switch (x) {
        // Empty switch - no cases
    }
    return 0;
}
